--- a/home/home.html
+++ b/home/home.html
@@ -45,7 +45,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="file:///C:/Users/Hailemichael/Downloads/devdeck-netlify/home/home.html" class="navbar-title-devdeck navbar-brand"<>Devdeck</a>
+            <a href="#" class="navbar-title-devdeck navbar-brand"<>Devdeck</a>
           </div>
               </li>
             </ul>
