Hightlight color selection change

--- a/home/home.html
+++ b/home/home.html
@@ -45,7 +45,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-title-devdeck navbar-brand"<>Devdeck</a>
+            <a style="position: relative; left: -210px; top:1px;"href="/" >
+              <img style="max-height:3.30rem"src="img/devdeck.png" />
+            </a>
+            <a style="position: relative; left: 65px; font-weight: 500;"href="/"class="navbar-title-devdeck navbar-brand">Devdeck</a>
           </div>
               </li>
             </ul>
@@ -60,7 +63,7 @@
                 <a class="fa fa-youtube fa-lg" href="https://www.youtube.com/channel/UCvga5CIi8IUZkuv_400Va4g"> YouTube</a>
               </li>
               <a href="https://discord.gg/6JmhYy4">
-              <img style="max-height:3.30rem"src="https://pythondiscord.com/static/images/navbar/navbar_discordjoin.svg" />
+              <img style="max-height:3.50rem;"src="https://pythondiscord.com/static/images/navbar/navbar_discordjoin.svg" />
               </a>
               <!-- <li>
                 <a class="fa fa-discord fa-lg" href="https://discord.gg/6JmhYy4"> Discord</a>
@@ -102,6 +105,26 @@
                   Our website hosted on netlify
                   <br><br>
                 </span><span class="repo-language-dot html"></span> HTML
+                  <!-- <span id="repo-footer-item"><i class="fa fa-star"></i> 0</span>
+                  <span id="repo-footer-item"><i class="fa fa-code-branch"></i> 1</span> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div style="padding-top: 60px;"class="column is-one-third-desktop is-half-tablet">
+            <div  style="display:inline-block;"class="card has-equal-height github-card">
+              <div style="padding: 1.5rem;box-sizing:inherit;display:inline-block; margin-right: 50px;"class="card-content">
+                <div class="repo-headline">
+                  <i class="fa fa-github fa-lg"></i>
+                  <a href="#"> <strong>Phoenix537/devdeck</strong></a>
+                </div>
+                <div>
+                  Our bot hosted on heroku,<br/>
+                  unfortunately it's private<br/>
+                  <br><br>
+                </span><span class="repo-language-dot html"></span> Python
                   <!-- <span id="repo-footer-item"><i class="fa fa-star"></i> 0</span>
                   <span id="repo-footer-item"><i class="fa fa-code-branch"></i> 1</span> -->
                 </div>
